--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,25 @@
 body{
-  padding-top:75px ;
+  padding-top:60px ;
   
 }
 .box-shadow{
   box-shadow: 0px 2px 4px 0px rgb(0 0 0 / 0.05), 0px 4px 8px 0px rgb(0 0 0 / 0.05);
+}
+
+#home-quote {
+  background: url("../img/bg-quote.jpg") center/cover no-repeat;
+}
+
+@media (max-width: 767px){
+  #home-quote .display-4{
+    font-size: 2.5rem;
+  }
+
+  body{
+    padding-top: 0;
+  }
+
+  .fixed-top{
+    position: relative;
+  }
 }
